# tapir

./: .gitignore  LICENSE  commands.py  pyproject.toml
notebooks/: call_gpt4.ipynb
tapir/: __init__.py  config.py
